Fixed number alignment of progressbar

--- a/css/style.css
+++ b/css/style.css
@@ -419,8 +419,15 @@ main {
 }
 
 .skills__skill-bar-content {
-  display: block;
-  text-align: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-right: 2%;
   height: 100%;
   background-size: 3rem 100%;
