--- a/sass/components/_skills.scss
+++ b/sass/components/_skills.scss
@@ -26,8 +26,9 @@
     }
 
     &__skill-bar-content {
-        display: block;
-        text-align: right;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
         padding-right: 2%;
         height: 100%;
         background-size: 3rem 100%;
